--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  background-color: #141e30;
+  font-family: "Consolas", "Courier New", monospace;
+  margin-top: 40px;
+}
+
+h1 {
+  color: #00e5ff;
+  font-size: 32px;
+  font-family: "Electrolize", sans-serif;
   text-align: center;
+  margin: 20px 0 30px 0;
+  text-shadow: 0 0 5px rgba(0, 229, 255, 0.8), 0 0 10px rgba(0, 229, 255, 0.5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tareas-lista-principal {
+  width: 600px;
+  min-height: 500px;
+  background-color: #243b55;
+  padding: 25px;
+  margin: 10px;
+  border-radius: 26px;
+  border: 2px solid #00e5ff;
+  box-shadow: 0 0 20px rgba(0, 229, 255, 0.7),
+    inset 0 0 10px rgba(0, 229, 255, 0.3);
+  color: #00e5ff;
 }
